--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <span class="stretch"></span>
         <div class="externalResources"><a href="kmtTemplate.html" title="Behance Link" target="_blank">KMT TEMPLATE PROJECT</a> </div>
         <span class="stretch"></span>
-        <div class="externalResources"><a href="https://github.com/nakeitaRobertsDev/republicServicesProject/blob/main/Nakeita%20Roberts%20Resume/index.html" title="Github Link" target="_blank">GITHUB</a> </div>
+        <div class="externalResources"><a href="https://github.com/nakeitaRobertsDev/nakeitaRobertsDev.github.io/blob/main/index.html" title="Github Link" target="_blank">GITHUB</a> </div>
       </aside>
     </section>
     <footer>
