--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nakeita Roberts Resume</title>
-    <link rel="icon" type="image/x-icon" href="images/rs_favicon.png">
-    <link rel="stylesheet" href="theme.css">
-    <link rel="stylesheet" href="custom.css">
-    <!--UIPATH_EXTENSION_ID: conkfbpnllelocpogdmbilgmnkabjfmf--></head>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Nakeita Roberts Resume</title>
+        <link rel="icon" type="image/x-icon" href="images/rs_favicon.png">
+        <link rel="stylesheet" href="theme.css">
+        <link rel="stylesheet" href="custom.css">
+    </head>
     
     <body>
     <!-- Header content -->
