--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
       <aside class="externalResourcesNav">
         <div class="externalResources"> <a href="images/Nakeita Roberts Resume.pdf" title="Download Resume" download="Nakeita Roberts Resume">DOWNLOAD RESUME</a> </div>
         <span class="stretch"></span>
-        <div class="externalResources"><a href="kmtTemplate.html" title="Behance Link" target="_blank">KMT TEMPLATE PROJECT</a> </div>
+        <div class="externalResources"><a href="kmtTemplate.html" title="KMT Template" target="_blank">KMT TEMPLATE PROJECT</a> </div>
         <span class="stretch"></span>
         <div class="externalResources"><a href="https://github.com/nakeitaRobertsDev/nakeitaRobertsDev.github.io/blob/main/index.html" title="Github Link" target="_blank">GITHUB</a> </div>
         <span class="stretch"></span>
-        <div class="externalResources"> <a href="https://github.com/nakeitaRobertsDev/nakeitaRobertsDev.github.io/blob/main/kmt_two.html" title="Knowledge Management: A Comprehensive Guide" target="_blank">Knowledge Management: A Comprehensive Guide</a> </div>
+        <div class="externalResources"> <a href="kmt_two.html" title="Knowledge Management: A Comprehensive Guide" target="_blank">KM Comprehensive Guide</a> </div>
       </aside>
     </section>
     <footer>
